# fastrack

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  FaSTrack.drawio  README.md  Untitled Diagram.drawio  compile_commands.json  ros_entrypoint.sh  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.json.bk  postCreateCommands.sh  requirements.txt
setup/: clean.sh  cyclonedds.xml  mamba_setup.sh  odp_setup.sh  ros2.repos  setup.sh
src/fastrack_core/: CMakeLists.txt  package.xml
src/fastrack_core/include/fastrack_core/: dynamics.hpp  relative_dynamics.hpp  t5D_p3D_dublins_car_dynamics.hpp
src/fastrack_core/src/: t5D_p3D_dublins_car_dynamics.cpp
src/fastrack_core/test/: dynamics_fixtures.hpp  test_t5D_p3D_dublins_car_dynamics.cpp
src/fastrack_demo/: CMakeLists.txt  package.xml
src/fastrack_demo/include/fastrack_demo/: dubins_car.hpp  hybrid_tracking_controller.hpp  robot_controller.hpp  simple_planner.hpp  simple_tracker.hpp
src/fastrack_demo/launch/: fastrack_simple.launch.py
src/fastrack_demo/params/: fastrack_params.yaml
src/fastrack_demo/src/: robot_controller.cpp  simple_planner.cpp  simple_tracker.cpp
src/fastrack_demo/srv/: PlannedPath.srv  TrackedPose.srv
